--- a/configs/ddppo_e2ecrowdnav.yaml
+++ b/configs/ddppo_e2ecrowdnav.yaml
@@ -26,7 +26,7 @@ RL:
   SUCCESS_REWARD: 2.5
   SLACK_REWARD: -1e-3
   DISTANCE_WEIGHT: 0.5
-  COLLISION_PENALTY: -1e-3
+  COLLISION_PENALTY: 0.0
 
   POLICY:
     name: "SimplePolicy"
