--- a/configs/challenge_crowdnav.local.rgbd.yaml
+++ b/configs/challenge_crowdnav.local.rgbd.yaml
@@ -3,7 +3,7 @@ ENVIRONMENT:
 
 SIMULATOR:
   COLLIDE_DIST: 0.1
-  NUMBER_OF_BOTS: 12
+  NUMBER_OF_BOTS: 6
   BOT_PATH: "../../crowd-nav-data/entities/locobot_merged_"
   BOT_CONFIG_PATH: "../../crowd-nav-data/crowd-nav/bot_config_v1.0"
   BOT_TRAJECTORY: [0.1, 0.1, 1.0, 1.0, 0.392, 0.392]
@@ -11,7 +11,7 @@ SIMULATOR:
   TILT_ANGLE: 30
   ACTION_SPACE_CONFIG: "v1"
   AGENT_0:
-    SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR']
+    SENSORS: ['DEPTH_SENSOR']
     HEIGHT: 0.88
     RADIUS: 0.18
   HABITAT_SIM_V0:
