--- a/configs/challenge_crowdnav.local.rgbd.yaml
+++ b/configs/challenge_crowdnav.local.rgbd.yaml
@@ -11,7 +11,7 @@ SIMULATOR:
   TILT_ANGLE: 30
   ACTION_SPACE_CONFIG: "v1"
   AGENT_0:
-    SENSORS: ['DEPTH_SENSOR']
+    SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR']
     HEIGHT: 0.88
     RADIUS: 0.18
   HABITAT_SIM_V0:
